# rust-system-tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config-example.toml
.github/workflows/: quick-build.yml  release.yml
scripts/: run_tests.sh
src/: config.rs  gui.rs  lib.rs  main.rs  udisks2.rs  wim.rs
tests/: README.md  wim.example.xml  wim_parser_test.rs
