[package]
name = "rust-study-examples"
version = "0.1.0"
authors = ["junjiangao <junjiangao@github.com>"]
edition = "2024"

[dependencies]
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = { version = "1.0.98" }
eframe = { version = "0.31.1", optional = true }
egui = { version = "0.31.1", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = ["gui"]
gui = ["eframe", "egui", "rfd"]
