[package]
name = "rust-system-tools"
version = "0.1.1"
authors = ["junjiangao <junjiangao@github.com>"]
edition = "2024"

[dependencies]
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = { version = "1.0.98" }
eframe = "0.31.1"
egui = "0.31.1"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
fontdb = "0.18"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
