[package]
name = "rust-system-tools"
version = "0.1.3"
authors = ["junjiangao <junjiangao@github.com>"]
edition = "2024"

[dependencies]
zbus = { version = "5.8.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
anyhow = { version = "1.0.98" }
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
fontdb = "0.23.0"

# WIM 解析库
wim-parser = "0.1.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }


